# ansimon

./: Cargo.toml  README.md
.github/workflows/: codeql.yml  release.yml
examples/: inventory.ini  inventory.yml
src/: cli.rs  config.rs  main.rs
src/inventory/: ini.rs  limit.rs  mod.rs  types.rs  yaml.rs
src/metrics/: mod.rs
src/ssh/: commands.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
